// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator dbml {
  provider            = "prisma-dbml-generator"
  outputName          = "punto8.dbml"
  projectName         = "punto 8 - industria textil"
  projectDatabaseType = "PostgreSQL"
  //https://dbdiagram.io/d
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://postgres:postgres@lab.vitico.space:31132/ingsoft?schema=punto8"
}

model Producto {
  id     Int    @id
  nombre String
  precio Int

  Descuento      Descuento[]
  DetalleFactura DetalleFactura[]
}

model Cliente {
  id            Int    @id
  nombre        String
  apellido      String
  telefono      String
  direccion     String
  email         String
  tipoClienteId Int?

  tipoCliente tipoCliente? @relation(fields: [tipoClienteId], references: [id])
  Factura     Factura[]
}

model tipoCliente {
  id     Int    @id
  nombre String

  clientes  Cliente[]
  Descuento Descuento[]
}

model Rango {
  id     Int    @id
  nombre String
  min    Int
  max    Int

  Descuento Descuento[]
}

model Descuento {
  nombre        String
  porcentaje    Int
  rangoId       Int
  tipoClienteId Int
  productoId    Int

  producto    Producto    @relation(fields: [productoId], references: [id])
  tipoCliente tipoCliente @relation(fields: [tipoClienteId], references: [id])
  rango       Rango       @relation(fields: [rangoId], references: [id])

  DetalleFactura DetalleFactura[]
  @@id([rangoId, productoId, tipoClienteId])
}

model Sucursal {
  id        Int       @id
  nombre    String
  direccion String
  telefono  String
  email     String
  Factura   Factura[]
}

model Factura {
  id         Int      @id
  fecha      DateTime
  clienteId  Int
  sucursalId Int

  cliente        Cliente          @relation(fields: [clienteId], references: [id])
  sucursal       Sucursal         @relation(fields: [sucursalId], references: [id])
  DetalleFactura DetalleFactura[]
}

model DetalleFactura {
  id         Int @id
  cantidad   Int
  precio     Int
  productoId Int
  facturaId  Int

  descuento              Descuento? @relation(fields: [descuentoRangoId, productoId, descuentoTipoClienteId], references: [rangoId, productoId, tipoClienteId])
  producto               Producto   @relation(fields: [productoId], references: [id])
  factura                Factura    @relation(fields: [facturaId], references: [id])
  descuentoRangoId       Int?
  descuentoTipoClienteId Int?
}
