//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "punto 8 - industria textil" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table Producto {
  id Int [pk]
  nombre String [not null]
  precio Int [not null]
  Descuento Descuento [not null]
  DetalleFactura DetalleFactura [not null]
}

Table Cliente {
  id Int [pk]
  nombre String [not null]
  apellido String [not null]
  telefono String [not null]
  direccion String [not null]
  email String [not null]
  tipoClienteId Int
  tipoCliente tipoCliente
  Factura Factura [not null]
}

Table tipoCliente {
  id Int [pk]
  nombre String [not null]
  clientes Cliente [not null]
  Descuento Descuento [not null]
}

Table Rango {
  id Int [pk]
  nombre String [not null]
  min Int [not null]
  max Int [not null]
  Descuento Descuento [not null]
}

Table Descuento {
  nombre String [not null]
  porcentaje Int [not null]
  rangoId Int [not null]
  tipoClienteId Int [not null]
  productoId Int [not null]
  producto Producto [not null]
  tipoCliente tipoCliente [not null]
  rango Rango [not null]
  DetalleFactura DetalleFactura [not null]

  indexes {
    (rangoId, productoId, tipoClienteId) [pk]
  }
}

Table Sucursal {
  id Int [pk]
  nombre String [not null]
  direccion String [not null]
  telefono String [not null]
  email String [not null]
  Factura Factura [not null]
}

Table Factura {
  id Int [pk]
  fecha DateTime [not null]
  clienteId Int [not null]
  sucursalId Int [not null]
  cliente Cliente [not null]
  sucursal Sucursal [not null]
  DetalleFactura DetalleFactura [not null]
}

Table DetalleFactura {
  id Int [pk]
  cantidad Int [not null]
  precio Int [not null]
  productoId Int [not null]
  facturaId Int [not null]
  descuento Descuento
  producto Producto [not null]
  factura Factura [not null]
  descuentoRangoId Int
  descuentoTipoClienteId Int
}

Ref: Cliente.tipoClienteId > tipoCliente.id

Ref: Descuento.productoId > Producto.id

Ref: Descuento.tipoClienteId > tipoCliente.id

Ref: Descuento.rangoId > Rango.id

Ref: Factura.clienteId > Cliente.id

Ref: Factura.sucursalId > Sucursal.id

Ref: DetalleFactura.(descuentoRangoId, productoId, descuentoTipoClienteId) > Descuento.(rangoId, productoId, tipoClienteId)

Ref: DetalleFactura.productoId > Producto.id

Ref: DetalleFactura.facturaId > Factura.id